# DistributedComputing

./: .gitignore
Exam/Task 1 - Server/: build.gradle  settings.gradle
LabRasp1/CPP/Lab 8/: CMakeLists.txt  main.cpp
LabRasp1/Java/Lab 8/: README.md
LabRasp1/Lab 1/: build.gradle  settings.gradle
LabRasp1/Lab 1/Part A/: settings.gradle
LabRasp1/Lab 1/Part B/: build.gradle  settings.gradle
LabRasp1/Lab 2/Part A/: main.go
LabRasp1/Lab 2/Part B/: settings.gradle
LabRasp1/Lab 2/Part C/: settings.gradle
LabRasp1/Lab 3/Part A/: settings.gradle
LabRasp1/Lab 3/Part B/: settings.gradle
LabRasp1/Lab 3/Part C/: main.go
LabRasp1/Lab 4/Part A/: database.map  settings.gradle
LabRasp1/Lab 4/Part B/: garden.maf  settings.gradle
LabRasp1/Lab 4/Part C/: main.go
LabRasp1/Lab 5/Part A/: settings.gradle
LabRasp1/Lab 5/Part B/: build.gradle  settings.gradle
LabRasp1/Lab 5/Part C/: main.go
LabRasp1/Lab 6/Part A/: .project  build.gradle  settings.gradle
LabRasp1/Lab 6/Part B/: build.gradle  settings.gradle
LabRasp1/Lab 7/: settings.gradle
LabRasp1/Lab 8/: HtmlBuilder.cs  Lab 8.csproj  Lab 8.sln  MainProgram.cs  Matrix.cs  MpiTestProgram.cs  Program.cs  README.md  SequentialAlgorithm.cs
LabRasp1/Lab 8/Lab 8 - Distributed Computing/: Lab 8 - Distributed Computing.sln  Lab 8.csproj  Program.cs
LabRasp1/Lab 9/Part 1/: build.gradle  settings.gradle
LabRasp1/Lab 9/Part 2/: index.html  main.go  style.css
LabRasp1/Lab 9/Part 3/: Lab 9 - Part 3 - Distributed Computing.sln  Lab 9 - Part 3 - Distributed Computing.vcxproj  calculator.cpp  calculator.h  (+7 more)
(+138 files in other folders)
